# doc-cache-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  ecosystem.config.js  pyproject.toml
.github/workflows/: ci.yml
src/doc_cache_mcp/: __init__.py  allowlist.py  config.py  docsync.py  observability.py  server.py
tests/: conftest.py  test_add_service.py  test_allowlist.py  test_allowlist_hardening.py  test_doc_sync_cli.py  test_fetch_ssrf.py  test_sync_and_list.py  test_vendored_allowlist_sync.py
