[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-cache-mcp"
version = "0.1.0"
description = "Capability-scoped FastMCP server for the forge documentation cache (list/add/sync + source-URL allowlist)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "fastmcp", "homelab", "documentation", "cache", "forge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "PyYAML>=6.0",
    # Required by the imported doc-sync logic (fetch + HTML->markdown).
    "requests>=2.31",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "influxdb3-python>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "PyYAML>=6.0",
]

[project.scripts]
doc-cache-mcp = "doc_cache_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_cache_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
